# OS-goldfs

./: .gitignore  README.md  build.zig  makefile  meson.build  meson_options.txt
disk_emu/: Cargo.toml
disk_emu/src/: lib.rs
fs/: Cargo.toml  build.rs
fs-c/include/: disk_emu.h  sfs_api.h
fs-c/src/: disk_emu.c  sfs_api.c
fs-c/tests/: sfs_test1.c  sfs_test1.h  sfs_test2.c  sfs_test2.h  tests.c  tests.h
fs/src/: demu.rs  lib.rs
src/: Makefile  disk_emu.c  disk_emu.h  sfs_api.c  sfs_api.h  sfs_test1.c  sfs_test2.c  tests.c  tests.h
